fix: configure .env e ambiente axios global

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 # production or development
 NODE_ENV="development"
 
-NEXT_PROD_API_BASE_URL=https://localhost:3002
-NEXT_DEV_API_BASE_URL=https://localhost:3002
+NEXT_PUBLIC_PROD_API_BASE_URL="https://localhost:3002"
+NEXT_PUBLIC_DEV_API_BASE_URL="https://localhost:3002"
+NEXT_PUBLIC_BASE_URL="https://localhost"
 
 FIREBASE_CLIENT_EMAIL=acarlossmed@gmail.com,
 NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyCihxmWbONCT6Yu30qdyM533ZnML84iHqo",
@@ -26,13 +27,13 @@ COOKIE_SECRET_CURRENT=@vb51ncr0n15m0
 COOKIE_SECRET_PREVIOUS=@vb51ncr0n15m0
 
 #certificado letsencrypt
-arq_cert="/home/augusto/Documentos/EMPRESA AVB/dash/keys/cert.pem"
-arq_key="/home/augusto/Documentos/EMPRESA AVB/dash/keys/privkey.pem"
-arq_ca="/home/augusto/Documentos/EMPRESA AVB/dash/keys/fullchain.pem"
+arq_cert="c:/dev/node/dash-beta/keys/cert.pem"
+arq_key="c:/dev/node/dash-beta/keys/privkey.pem"
+arq_ca="c:/dev/node/dash-beta/keys/fullchain.pem"
 
 # Cookie options.
 NEXT_PUBLIC_COOKIE_SECURE=false # set to true in HTTPS environment
-ENDPOINT_AVBSERVER="https://localhost:3002"
+NEXT_ENDPOINT_AVBSERVER="https://localhost:3002"
 PORT_AVBSERVER='3002'
 PORT_DASH="443"
 ENDPOINT_DASH="https://localhost"
