--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "dash-latest",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
+    "@tanstack/react-query": "^5.48.0",
+    "@tanstack/react-query-devtools": "^5.48.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
@@ -25,13 +19,22 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
-    "@types/node": "^20",
+    "@types/node": "^20.14.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^9.5.0",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "typescript": "^5.5.2"
+  },
+  "name": "dash-latest",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "node server.js",
+    "lint": "next lint",
+    "start": "NODE_ENV=production node server.js"
+  },
+  "version": "0.1.0"
 }
